[gd_scene load_steps=2 format=3 uid="uid://cpoyrrh6sjc46"]

[ext_resource type="Script" path="res://scripts/world_ui.gd" id="1_7g5n3"]

[node name="WorldUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7g5n3")

[node name="MenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -53.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Menu"

[node name="WorldClock" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_right = 32.0
offset_bottom = 23.0
grow_horizontal = 2
text = "00:00:00"

[node name="TileInfoPanel" type="Panel" parent="."]
layout_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TileInfoPanel"]
layout_mode = 1
offset_right = 107.0
offset_bottom = 405.0

[node name="TileLabel" type="Label" parent="TileInfoPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Tile Info"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="TileInfoPanel/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="TileIDLabel" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Tile ID:"

[node name="TileIDValue" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Placeholder"

[node name="RowLabel" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Row:"

[node name="RowValue" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Placeholder"

[node name="ColLabel" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Col:"

[node name="ColValue" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Placeholder"

[node name="CoordinatesLabel" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Coordinates:"

[node name="CoordinatesValue" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Placeholder"

[node name="ClimateZoneLabel" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Climate Zone:"

[node name="ClimateZoneValue" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Placeholder"

[node name="ElevationLabel" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Elevation:"

[node name="ElevationValue" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Placeholder"

[node name="FeaturesLabel" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Features:"

[node name="FeaturesValue" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Placeholder"

[node name="TemperatureLabel" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Temperature:"

[node name="TemperatureValue" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Placeholder"

[node name="MoistureLabel" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Moisture:"

[node name="MoistureValue" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Placeholder"

[node name="IsOceanLabel" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Is Ocean:"

[node name="IsOceanValue" type="Label" parent="TileInfoPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Placeholder"
